<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/contacts_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/contacts"
            android:textStyle="bold"
            android:textColor="@color/bentley_dark_blue"
            android:textSize="24sp"
            android:padding="10dp"
            android:gravity="center"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/back"
            android:padding="10dp"
            android:background="@color/yellow" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contacts_list_headings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dept_heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dept_heading"
            android:layout_weight="3"
            style="@style/ContactListHeading"/>

        <TextView
            android:id="@+id/phone_heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_heading"
            android:layout_weight="2"
            style="@style/ContactListHeading" />

        <TextView
            android:id="@+id/email_heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email_heading"
            android:layout_weight="3"
            style="@style/ContactListHeading" />

    </LinearLayout>

    <ListView
        android:id="@+id/contact_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bentley_light_blue" />

</LinearLayout>